--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,7 +7,8 @@
     <style>
         body{background: skyblue; font-family: Verdana, Geneva, Tahoma, sans-serif; color: #fff; padding: 30;}
         h1{font-size: 48px; text-transform: uppercase; letter-spacing: 2px; text-align: center;}
-        p{font-size: 16px; text-align: center;}
+        h2{font-size: 30px; text-transform: uppercase; letter-spacing: 2px; text-align: center;}
+        p, li{font-size: 16px; text-align: center;}
     </style>
     <title>Document</title>
 </head>
@@ -17,5 +18,10 @@
     <p>welcome to the profile to: <%= person %></p>
     <p>his age is: <%= data.age %></p>
     <p>his job is: <%= data.job %></p>
+    <h2>Hobbies</h2>
+    <ul>
+        <% data.hobbies.forEach(function(hobby){ %>
+            <li><%= hobby %></li>
+        <%  }) %>
 </body>
 </html>
