--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,22 +7,13 @@
     <style>
         body{background: skyblue; font-family: Verdana, Geneva, Tahoma, sans-serif; color: #fff; padding: 30;}
         h1{font-size: 48px; text-transform: uppercase; letter-spacing: 2px; text-align: center;}
-        h2{font-size: 30px; text-transform: uppercase; letter-spacing: 2px; text-align: center;}
-        p, li{font-size: 16px; text-align: center;}
+        p{font-size: 16px; text-align: center;}
     </style>
     <title>Document</title>
 </head>
 <body>
     <%- include('partials/nav'); %>
-    <h1>ejs is hereeee guyyyyyyyyyyyysssssss</h1>
+    <h1>welcome to the club of node</h1>
     <p>you wn't find any better page</p>
-    <p>welcome to the profile to: <%= person %></p>
-    <p>his age is: <%= data.age %></p>
-    <p>his job is: <%= data.job %></p>
-    <h2>Hobbies</h2>
-    <ul>
-        <% data.hobbies.forEach(function(hobby){ %>
-            <li><%= hobby %></li>
-        <%  }) %>
 </body>
 </html>
