--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -15,5 +15,14 @@
     <%- include('partials/nav'); %>
     <h1>welcome to contact node</h1>
     <p>you wn't find any contacts</p>
+    <form action="contact-form">
+        <label for="who">who do you want to centact?</label>
+        <input type="text" name="who" value="<%=qs.person %>">
+        <label for="department">which department?</label>
+        <input type="text" name="department" value="<%=qs.dept %>">
+        <label for="email">your email</label>
+        <input type="text" name="email">
+        <input type="submit" value="submit">
+    </form>
 </body>
 </html>
