--- a/views/contact-success.ejs
+++ b/views/contact-success.ejs
@@ -14,15 +14,9 @@
 <body>
     <%- include('partials/nav'); %>
     <h1>welcome to contact node</h1>
-    <p>you wn't find any contacts</p>
-    <form id="contact-form" method="POST" action="/contact" >
-        <label for="who">who do you want to centact?</label>
-        <input type="text" name="who" value="<%=qs.person %>">
-        <label for="department">which department?</label>
-        <input type="text" name="department" value="<%=qs.dept %>">
-        <label for="email">your email</label>
-        <input type="text" name="email">
-        <input type="submit" value="submit">
-    </form>
+    <p>Thanks for submiting</p>
+    <p>you contacted: <%= data.who %> in the <%= data.department %> department.</p>
+    <p>we will reply to you at <%= data.email %></p>
+
 </body>
 </html>
